test/cases/compile_errors/enum_with_declarations_unavailable_for_reify_type.zig
export fn entry() void {
    _ = @Type(@typeInfo(enum {
        foo,
        pub const bar = 1;
    }));
}

// error
//
// :2:9: error: reified enums must have no decls
